# ETHArena

./: .gitignore  README.md  requirements.txt
.github/workflows /: release.yml
ETHArenaSDK/: .env.example  baseAgent.py  main.py  package-lock.json  package.json  prompts.json  requirements.txt
ETHArenaSDK/contracts/: BaseArena.json
Exportedcontracts/: .env.example
Exportedcontracts/contracts/: BaseArena.sol
Exportedcontracts/scripts/: deploy.js
UnityGame/Plugins/: UnrealPlugin.cs
UnityGame/Scripts/: GameManager.cs
baseArenaSDK/: .env  .env.example  baseAgent.py  main.py  requirements.txt
contracts/: hardhat.config.js  package-lock.json
contracts/abi/: ETHArena.abi
contracts/contracts/: BaseArena.sol  FlattenedBaseArena.sol
contracts/ignition/modules/: BaseArena.js
etharenaSubgraph/: networks.json  package.json  subgraph.yaml
etharenaSubgraph/abis/: ETHArena.json
etharenaSubgraph/src/: eth-arena.ts
etharenaSubgraph/tests/: eth-arena-utils.ts
etharenasubgraph/: networks.json  package.json  schema.graphql  subgraph.yaml
etharenasubgraph/abis/: ETHArena.json
etharenasubgraph/src/: eth-arena.ts
etharenasubgraph/tests/: eth-arena-utils.ts  eth-arena.test.ts
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: GamePerformanceDashboard.jsx  GamingDashboard.jsx  GraphExplorerDashboard.jsx  Landing.jsx  NFTMarketplace.jsx  Navbar.jsx  Web3Provider.jsx
frontend/src/contracts/: BaseArena.json
stylus-contracts/: Cargo.toml  abi.json
stylus-contracts/src/: barn_nft.rs  erc721.rs  lib.rs
(+19 files in other folders)
