[package]
name = "stylus-erc721"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.2"
alloy-sol-types = "0.8.2"
stylus-sdk = "0.7.0"
sp-core = { version = "35.0.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"

[features]
export-abi = ["stylus-sdk/export-abi"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"